V25.12.3: Reread alignment, separated it into another document, better homepage, some fixes in other files

--- a/source/_static/css/mystyle.css
+++ b/source/_static/css/mystyle.css
@@ -149,3 +149,11 @@ ul.toc ul {
 .small-text * {
   font-size: small;
 }
+
+#asmx86-64 h1 {
+  display: none;
+}
+
+.logo__image {
+  height: 200px!important;
+}
